--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Shane Butler - Front-End Developer</title>
 </head>
 <body>
+    <img width="125px" src="assets/sbutler-400.webp">
     <h1><a href="index.html">Shane Butler</a></h1>
     <h2>Front-End Developer  <em>(In-training)</em></h2>
     Project 1
