--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
     <title>Shane Butler - Front-End Developer</title>
 </head>
 <body>
-    <img width="125px" src="assets/sbutler-400.webp">
-    <h1><a href="index.html">Shane Butler</a></h1>
-    <h2>Front-End Developer  <em>(In-training)</em></h2>
-    Project 1
-    <br>
-    Project 2
-    <br>
-    Project 3
-    <br>
-    <h2>About me</h2>
+    <div class="nav-bar">
+        <img width="130px" src="assets/sbutler-400.webp">
+        <h1><a href="index.html">Shane Butler</a></h1>
+        <h2>Front-End Developer  <em>(In-training)</em></h2>
+        Project 1
+        <br>
+        Project 2
+        <br>
+        Project 3
+        <br>
+        <h2>About me</h2>
+    </div>
 </body>
 </html>
