--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@
         Project 3
         <br>
         <h2><a href="about.html">About me</a></h2> 
+        Budding developer based in the beautiful and abundantly rich West Virginia. 12 year architectural photographer now learning to design and develop first projects!
     </div>
 </body>
 </html>
