update formatting to match index

--- a/about.html
+++ b/about.html
@@ -10,16 +10,18 @@
 <body>
     <div class="nav-bar">
         <img width="130px" src="assets/sbutler-400.webp">
-        <h1><a href="index.html">Shane Butler</a></h1>
-        <h2>Front-End Developer  <em>(In-training)</em></h2>
-        Project 1
-        <br>
-        Project 2
-        <br>
-        Project 3
-        <br>
-        <h2><a href="about.html">About me</a></h2> 
-        Budding developer based in the beautiful and abundantly rich West Virginia. 12 year architectural photographer now learning to design and develop first projects!
+        <div class ="links">
+            <h1><a href="index.html">Shane Butler</a></h1>
+            <h2>Front-End Developer  <em>(In-training)</em></h2>
+            Project 1
+            <br>
+            Project 2
+            <br>
+            Project 3
+            <br>
+            <h2><a href="about.html">About me</a></h2> 
+            Budding developer based in beautiful West Virginia. 12 year architectural photographer now learning to design and develop first projects!
+        </div>
     </div>
 </body>
 </html>
