--- a/index.html
+++ b/index.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Shane Butler - Front-End Developer</title>
-</head>
-<body>
-    <div class="nav-bar">
-        <img width="130px" src="assets/sbutler-400.webp">
-        <div class ="links">
-            <nav>
-                <h1><a href="index.html">Shane Butler</a></h1>
-                <h2>Front-End Developer  <em>(In-training)</em></h2>
-                Project 1
-                <br>
-                Project 2
-                <br>
-                Project 3
-                <br>
-                <h2><a href="about.html">About me</a></h2> 
-            </nav>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <title>Shane Butler - Full-stack Developer</title>
+    </head>
+    <body>
+        <div class="nav-bar">
+            <img width="130px" src="assets/sbutler-400.webp">
+            <div class ="links">
+                <nav>
+                    <h1><a href="index.html">Shane Butler</a></h1>
+                    <h2>Full-stack Developer</h2>
+                    <a href="project-one.html">Project 1</a>
+                    Project 2
+                    <br>
+                    Project 3
+                    <br>
+                    <h2><a href="about.html">About me</a></h2> 
+                </nav>
+            </div>
         </div>
-    </div>
-</body>
+    </body>
 </html>
