--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <nav>
                     <h1><a href="index.html">Shane Butler</a></h1>
                     <h2>Full-stack Developer</h2>
-                    <a href="project-one.html">Project 1</a>
+                    <a href="project-one.html">What's for Dinner Poker</a>
                     Project 2
                     <br>
                     Project 3
