--- a/project-one.html
+++ b/project-one.html
@@ -13,7 +13,7 @@
             <nav>
                 <h1><a href="index.html">Shane Butler</a></h1>
                 <h2>Full-stack Developer</h2>
-                <a href="project-one.html">Project 1</a>
+                <a href="index.html">What's for Dinner Poker</a>
                 Project 2
                 <br>
                 Project 3
@@ -22,9 +22,11 @@
                 </nav>
         </div>
         <article class="project">
-            <h1>Rochambeau</h1>
+            <h1>What's for Dinner Poker</h1>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                What's for Dinner Poker is a web-based game that is played to create a five-meal meal plan. Users select a pre-made deck based on seasonal meal themes or their own user created deck. The two-round interactive game-play results in a final “hand” of five meal cards. Users have the ability to create, edit, and delete both decks and cards.
+            </br>
+                The game seeks to help meal planning by reducing decision fatigue while remaining interactive, and customizable through user-created decks.
             </p>
         </article>
     </body>
