--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
                     Project 3
                     <br>
                     <h2><a href="index.html">About me</a></h2>
-                    Budding developer based in beautiful West Virginia. 12 year architectural photographer now learning to design and develop first projects!
+                    I am a full-stack developer shifting from a 12-year photography career. I have a passion for web applications, learning, and harnessing my skills to reach creative solutions.
                 </nav>
             </div>
         </div>
