Add github link to project

--- a/project-one.html
+++ b/project-one.html
@@ -22,7 +22,7 @@
                 </nav>
         </div>
         <article class="project">
-            <h1>What's for Dinner Poker</h1>
+            <h1>What's for Dinner Poker - <a href="https://github.com/shanedbutler/whats-for-dinner-poker">GitHub</a></h1>
             <p>
                 What's for Dinner Poker is a web-based game that is played to create a five-meal meal plan. Users select a pre-made deck based on seasonal meal themes or their own user created deck. The two-round interactive game-play results in a final “hand” of five meal cards. Users have the ability to create, edit, and delete both decks and cards.
             </br>
