--- a/about.html
+++ b/about.html
@@ -15,9 +15,8 @@
                     <h1><a href="index.html">Shane Butler</a></h1>
                     <h2>Full-stack Developer</h2>
                     <a href="project-one.html">What's for Dinner Poker</a>
-                    Project 2
-                    <br>
-                    Project 3
+                    <a href="project-two.html">Pick-up Game Planner</a>
+                    Project 3 (TBA)
                     <br>
                     <h2><a href="index.html">About me</a></h2>
                     I am a full-stack developer shifting from a 12-year photography career. I have a passion for web applications, learning, and harnessing my skills to reach creative solutions.
