Update with resume and project preview gifs

--- a/about.html
+++ b/about.html
@@ -16,9 +16,10 @@
                     <h2>Full-stack Developer</h2>
                     <a href="project-one.html">What's for Dinner Poker</a>
                     <a href="project-two.html">Pick-up Game Planner</a>
-                    Project 3 (TBA)
-                    <br>
-                    <h2><a href="index.html">About me</a></h2>
+                    <br/>
+                    <a href="assets/sbutler-resume-jan-23.pdf">My resume</a>
+                    <br/>
+                    <a href="index.html">About me</a>
                     I am a full-stack developer shifting from a 12-year photography career. I have a passion for web applications, learning, and harnessing my skills to reach creative solutions.
                 </nav>
             </div>
