--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
                     <h2>Full-stack Developer</h2>
                     <a href="project-one.html">What's for Dinner Poker</a>
                     <a href="project-two.html">Pick-up Game Planner</a>
-                    Project 3 (TBA)
-                    <br>
-                    <h2><a href="about.html">About me</a></h2> 
+                    <br/>
+                    <a href="assets/sbutler-resume-jan-23.pdf">My resume</a>
+                    <br/>
+                    <a href="about.html">About me</a>
                 </nav>
             </div>
         </div>
