--- a/project-one.html
+++ b/project-one.html
@@ -1,32 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
-        <title>Shane Butler - Full-stack Developer</title>
-    </head>
-    <body>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Shane Butler - Full-stack Developer</title>
+</head>
+
+<body>
     <img width="130px" src="assets/sbutler-400.webp">
-        <div class="page">
-            <nav>
-                <h1><a href="index.html">Shane Butler</a></h1>
-                <h2>Full-stack Developer</h2>
-                <a href="index.html">What's for Dinner Poker</a>
-                <a href="project-two.html">Pick-up Game Planner</a>
-                Project 3 (TBA)
-                <br>
-                <h2><a href="about.html">About me</a></h2> 
-                </nav>
-        </div>
+    <div class="nav-row">
+        <nav>
+            <h1><a href="index.html">Shane Butler</a></h1>
+            <h2>Full-stack Developer</h2>
+            <a href="index.html">What's for Dinner Poker</a>
+            <a href="project-two.html">Pick-up Game Planner</a>
+            <br/>
+            <a href="assets/sbutler-resume-jan-23.pdf">My resume</a>
+            <br/>
+            <a href="about.html">About me</a>
+        </nav>
         <article class="project">
+            <aside>
+                <img class="poker-gif" src="assets/poker-preview.gif">
+            </aside>
             <h1>What's for Dinner Poker - <a href="https://github.com/shanedbutler/whats-for-dinner-poker">GitHub</a></h1>
             <p>
-                What's for Dinner Poker is a web-based game that is played to create a five-meal meal plan. Users select a pre-made deck based on seasonal meal themes or their own user created deck. The two-round interactive game-play results in a final “hand” of five meal cards. Users have the ability to create, edit, and delete both decks and cards.
+                What's for Dinner Poker is a web-based game that is played to create a five-meal meal plan. Users select a
+                pre-made deck based on seasonal meal themes or their own user created deck. The two-round interactive game-play
+                results in a final “hand” of five meal cards. Users have the ability to create, edit, and delete both decks and
+                cards.
             </br>
-                The game seeks to help meal planning by reducing decision fatigue while remaining interactive, and customizable through user-created decks.
-            </p>
-        </article>
-    </body>
+            The game seeks to help meal planning by reducing decision fatigue while remaining interactive, and customizable
+            through user-created decks.
+        </p>
+    </article>
+</div>
+</body>
+
 </html>
