--- a/project-two.html
+++ b/project-two.html
@@ -11,29 +11,36 @@
 
 <body>
    <img width="130px" src="assets/sbutler-400.webp">
-   <div class="page">
+   <div class="nav-row">
       <nav>
          <h1><a href="index.html">Shane Butler</a></h1>
          <h2>Full-stack Developer</h2>
          <a href="project-one.html">What's for Dinner Poker</a>
          <a href="index.html">Pick-up Game Planner</a>
-         Project 3 (TBA)
-         <br>
-         <h2><a href="about.html">About me</a></h2>
+         <br/>
+         <a href="assets/sbutler-resume-jan-23.pdf">My resume</a>
+         <br/>
+         <a href="about.html">About me</a>
       </nav>
+      <article class="project">
+         <aside>
+            <img class="poker-gif" src="assets/pup-preview.gif">
+         </aside>
+         <h1>Pick-Up Game Planner - <a href="https://github.com/shanedbutler/pug-planner">GitHub</a></h1>
+         <p>
+            Pick-Up Game Planner, also known as PUG Planner, or PUP is a web application to plan, organize, and manage
+            community pick-up game events. Users can register for game events, view rosters, and be assigned positions
+            based on
+            their preferred positions. The app handles a wait-list, a notification system, and includes functionality
+            for admins
+            to manage games and users.
+            </br>
+            The application was created in late 2022 as a capstone project to the NewForce coding school. The app was
+            designed and deployed
+            for a community of soccer players in Los Angeles.
+         </p>
+      </article>
    </div>
-   <article class="project">
-      <h1>Pick-Up Game Planner - <a href="https://github.com/shanedbutler/pug-planner">GitHub</a></h1>
-      <p>
-         Pick-Up Game Planner, also known as PUG Planner, or PUP is a web application to plan, organize, and manage
-         community pick-up game events. Users can register for game events, view rosters, and be assigned positions based on
-         their preferred positions. The app handles a wait-list, a notification system, and includes functionality for admins
-         to manage games and users.
-         </br>
-         The application was created in late 2022 as a capstone project to the NewForce coding school. The app was designed and deployed
-         for a community of soccer players in Los Angeles.
-      </p>
-   </article>
 </body>
 
 </html>
