--- a/index.html
+++ b/index.html
@@ -1,27 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
-        <title>Shane Butler - Full-stack Developer</title>
-    </head>
-    <body>
-        <div class="nav-bar">
-            <img width="130px" src="assets/sbutler-400.webp">
-            <div class ="links">
-                <nav>
-                    <h1><a href="index.html">Shane Butler</a></h1>
-                    <h2>Full-stack Developer</h2>
-                    <a href="project-one.html">What's for Dinner Poker</a>
-                    <a href="project-two.html">Pick-up Game Planner</a>
-                    <br/>
-                    <a href="assets/sbutler-resume-jan-23.pdf">My resume</a>
-                    <br/>
-                    <a href="about.html">About me</a>
-                </nav>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Add Tailwind CSS -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Add Alpine.js -->
+    <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
+    <title>Shane Butler - Full Stack Developer</title>
+  </head>
+  <body class="dark:bg-slate-800 dark:text-slate-300">
+    <main class="m-5 max-w-xl">
+      <h1 class="text-xl mb-2 dark:text-white">Shane Butler - Full Stack Developer</h1>
+      <div class="text-sm mb-4">
+        <h3>
+          <a class="hover:text-slate-600 dark:hover:text-white" href="resume.html">Resume</a>
+        </h3>
+        <h3>
+          <a class="hover:text-slate-600 dark:hover:text-white" href="https://github.com/shanedbutler">GitHub</a>
+        </h3>
+        <h3>
+          <a class="hover:text-slate-600 dark:hover:text-white" href="https://www.linkedin.com/in/shanedbutler">LinkedIn</a>
+        </h3>
+      </div>
+      <p class="text-slate-900 text-sm mb-4">
+        Hi, my name is Shane. I am a software engineer who shifted from a
+        12-year photography career. I've collaborated in teams using version
+        control (Git), built front-end SPAs (Javascript / React), and wrote
+        back-end services (C# / .NET). I have a passion for web applications,
+        learning, and utilizing my skills to reach creative solutions. I also
+        like to do other things: cooking up delicious meals, birding, and
+        mountain biking.
+      </p>
+      <div class="space-y-2" x-data="{ activeAccordion: 0 }">
+        <div>
+          <button
+            x-on:click="activeAccordion = activeAccordion === 0 ? false : 0"
+            :class="{ 'button-active': activeAccordion === 0 }"
+            class="button"
+          >
+            <h2 class="hover:text-slate-600 dark:text-white">Pick-Up Game Planner</h2>
+          </button>
+
+          <div x-cloak x-show="activeAccordion === 0" x-collapse>
+            <div class="text-slate-900 content text-sm ml-2">
+              A web application to plan, organize, and manage community pick-up
+              game events. Users can register for game events, view rosters, and
+              be assigned positions based on their preferred positions. The app
+              handles a wait-list, a notification system, and includes
+              functionality for admins to manage games and users. The app was
+              designed and deployed for a community of soccer players in Los
+              Angeles.
             </div>
+          </div>
         </div>
-    </body>
+
+        <div>
+          <button
+            x-on:click="activeAccordion = activeAccordion === 1 ? false : 1"
+            :class="{ 'button-active': activeAccordion === 1 }"
+            class="button"
+          >
+            <h2 class="hover:text-slate-600 dark:text-white">What's for Dinner Poker</h2>
+          </button>
+
+          <div x-cloak x-show="activeAccordion === 1" x-collapse>
+            <div class="text-slate-900 content text-sm ml-2">
+              A web game that is played to create a five-meal meal plan. Users
+              select a pre-made deck based on seasonal meal themes or their own
+              user created deck. The two-round interactive game-play results in
+              a final “hand” of five meal cards. The game seeks to help meal
+              planning by reducing decision fatigue while remaining interactive,
+              and customizable through user-created decks.
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
