Add explicit specification of Alpine.js version

--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
   <!-- Add Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- Add Alpine.js -->
-  <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
+  <script defer src="https://unpkg.com/alpinejs@3.11.1/dist/cdn.min.js"></script>
   <title>Shane Butler - Full Stack Developer - Resume</title>
 </head>
 
