Move x-cloak style to inline html

--- a/resume.html
+++ b/resume.html
@@ -10,6 +10,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- Add Alpine.js -->
   <script defer src="https://unpkg.com/alpinejs@3.11.1/dist/cdn.min.js"></script>
+  <style>[x-cloak] { display: none !important; }</style>
   <title>Shane Butler - Full Stack Developer - Resume</title>
 </head>
 
