--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <link rel="stylesheet" href="styles.css" />
   <!-- Add Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
-  <!-- Add Alpine.js -->
+  <!-- Alpine.js Plugins -->
+<script defer src="https://unpkg.com/@alpinejs/collapse@3.11.1/dist/cdn.min.js"></script>
+  <!-- Alpine.js Core -->
   <script defer src="https://unpkg.com/alpinejs@3.11.1/dist/cdn.min.js"></script>
   <style>[x-cloak] { display: none !important; }</style>
   <title>Shane Butler - Full Stack Developer</title>
