--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 
 <body class="flex justify-center dark:bg-slate-800 dark:text-slate-300">
-  <main class="my-6 mx-auto w-5/6 md:w-4/6 lg:w-7/12 xl:w-2/4">
+  <main class="my-6  mx-auto w-5/6 md:w-4/6 lg:w-7/12 xl:w-2/4">
     <section>
       <h1 class="text-2xl mb-2 dark:text-white">
         <a href="index.html">Shane Butler</a>
@@ -60,8 +60,8 @@
         enjoy cooking, birding, and snapping great photos. Let's get in touch!
       </p>
     </section>
-    <section>
-      <h2 class="text-lg dark:text-white">Projects</h2>
+    <section class="leading-relaxed">
+      <h2 class="underline text-lg dark:text-white mb-1">Projects</h2>
       <div x-data="{ activeAccordion: 2 }">
         <div>
           <button x-on:click="activeAccordion = activeAccordion === 0 ? false : 0"
