Add loom demo links to projects

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
     [x-cloak] {
       display: none !important;
     }
+
     body {
       font-family: 'Poppins', sans-serif;
-    } 
+    }
   </style>
   <title>Shane Butler - Full Stack Developer</title>
 </head>
@@ -78,7 +79,9 @@
               rosters, and be assigned positions based on their preferred
               positions. The app handles a wait-list, a notification system,
               and includes functionality for admins to manage games and users.
-              The app was designed for a community of soccer players in Los Angeles.
+              The app was designed for a community of soccer players in Los Angeles. See
+              <a class="underline hover:text-slate-600 dark:text-white hover:dark:text-slate-300" target="_blank"
+              href="https://www.loom.com/share/3d06a0a110cf495ea404cc1eabec8ea5">Loom demo</a>.
             </p>
           </div>
         </div>
@@ -98,7 +101,9 @@
               own user created deck. The two-round interactive game-play
               results in a final “hand” of five meal cards. The game seeks to
               help meal planning by reducing decision fatigue while remaining
-              interactive, and customizable through user-created decks.
+              interactive, and customizable through user-created decks. See
+              <a class="underline hover:text-slate-600 dark:text-white hover:dark:text-slate-300" target="_blank"
+                href="https://www.loom.com/share/eb898482ea8e484dad6c450e59494dbe">Loom demo</a>.
             </p>
           </div>
         </div>
