--- a/index.html
+++ b/index.html
@@ -104,6 +104,11 @@
               interactive, and customizable through user-created decks. See
               <a class="underline hover:text-slate-600 dark:text-white hover:dark:text-slate-300" target="_blank"
                 href="https://www.loom.com/share/eb898482ea8e484dad6c450e59494dbe">Loom demo</a>.
+                <div style="position: relative; padding-bottom: 121.72211350293543%; height: 0;"><iframe
+                  src="https://www.loom.com/embed/3d06a0a110cf495ea404cc1eabec8ea5" frameborder="0" webkitallowfullscreen
+                  mozallowfullscreen allowfullscreen
+                  style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
+              </div>
             </p>
           </div>
         </div>
